--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,4 +1,3 @@
-
 .calendar-container {
   display: inline-block;
   margin: auto;
@@ -13,13 +12,44 @@
   align-items: flex-start;
 }
 
-.input-box {
-  /* display: inline;
-  margin-left: 200px;
-  height: 200px;
-  background-color: aqua; */
-    /* align-content: space-between; */
-  /* height: 1500px; */
-  /* height: auto; */
+.sidenav {
+  width: 250px;
+  transition: width 0.3s ease-in-out;
+  height: 100vh;
+  background-color: rgb(10, 25, 41);
+  padding-top: 28px;
+}
+.sidenavClosed {
+  /* composes: sidenav; */
+  transition: width 0.3s ease-in-out;
+  width: 60px;
+}
+.sideitem {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  cursor: pointer;
+  color: #b2bac2;
+  text-decoration: none;
+}
+.linkText {
+  padding-left: 16px;
+}
+.linkTextClosed {
+  /* composes: linkText; */
+  visibility: hidden;
+}
+.sideitem:hover {
+  background-color: #244f7d1c;
 }
 
+.menuBtn {
+  align-self: center;
+  align-self: flex-start;
+  justify-self: flex-end;
+  color: #b2bac2;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding-left: 20px;
+}
